# Glint3D

./: .ai.json  .gitattributes  .gitignore  .glint_history  .glint_recent  .mailmap  BUILD_SCRIPTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  OpenGLTemplate.sln  PATH_SECURITY_BUILD_FIX.md  QA_ASSESSMENT.md  README.md  README.md.bak  RELEASE.md  WEB_BUILD.md  bash.exe.stackdump  build-and-run.bat  build-and-run.sh  debug_objloader_test.cpp  debug_output.txt  glint.bat  glint3d.sln  imgui.ini  package-lock.json  package.json  setup-and-build.sh  setup_glint_env.bat  setup_glint_env.sh  shader_log.txt  simple_diagnostic.json  test-comprehensive-parenting.json  test-hierarchy.json  test-reparent.json  test-transform-inheritance.json  test_enhanced_delete_insert.json  test_golden_comparison.sh  test_path_security.sh  tmp_ui_bridge_h.txt  (+2 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-docs.yml
Project1/: .gitignore  Application.cpp  Application.h  AxisRenderer.cpp  AxisRenderer.h  BVHNode.cpp  BVHNode.h  GpuRaytracer.cpp  GpuRaytracer.h  Project1.vcxproj  Project1.vcxproj.filters  README.md  RayUtils.h  grid.cpp  imgui.ini  light.cpp  light.h  main.cpp  material.cpp  material.h  objloader.cpp  objloader.h  raytracer.cpp  raytracer.h  shader.cpp  shader.h  shader_log.txt  texture.cpp  texture.h  triangle.h  userinput.cpp
Project1/include/: InputHandler.h  RayUtils.h  ai_bridge.h  ai_instructions.h  app_commands.h  app_state.h  application.h  application_core.h  assimp_loader.h  axisrenderer.h  commands.h  compute_shader.h  gizmo.h  gl43_compat.h  grid.h  i_ui_layer.h  imgui_layer.h  light.h  material.h  mesh_loader.h  nl_executor.h  objloader.h  ray.h  raytracer.h  render_system.h  scene_manager.h  shader.h  texture.h  triangle.h  ui_bridge.h  userinput.h
Project1/shaders/: grid.frag  grid.vert  outline.frag  outline.vert  pbr.frag  pbr.vert  raytrace.comp  standard.frag  standard.vert
Project1/src/: InputHandler.cpp  ai_bridge.cpp  ai_instructions.cpp  app_commands.cpp  app_state.cpp  application.cpp  application_core.cpp  assimp_loader.cpp  commands.cpp  compute_shader.cpp  gl43_compat.cpp  grid.cpp  imgui_ui_layer.cpp  importer_registry.cpp  input_handler.cpp  json_ops_v1.cpp  light.cpp  main.cpp  material.cpp  mesh_loader.cpp  nl_executor.cpp  objloader.cpp  render_offscreen.cpp  render_system.cpp  scene_io.cpp  shader.cpp  texture.cpp  texture_cache.cpp  ui_bridge.cpp  userinput.cpp
ai/: FOR_DEVELOPERS.md  FOR_MACHINES.md  README.md  notes.txt  prompts.md
ai-meta/: changelog.json  constraints.json  intent_map.json  non_functional.json  reasoning.md
ai-out/: constraints.json
ai/config/: README.md  claude.json  requirements_catalog.json
ai/ontology/: ontology.jsonld
ai/prompts/: QA_PASS_PROMPT.md  TASK_MODULE_CREATION_PROMPT.md
ai/tasks/: CURRENT  README.md  current_index.json  ideas.txt  index.json  render_system_decomposition.md  verify_task_completion.sh
assets/models/: triangle.ply
build-temp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OpenGLOBJViewer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  objviewer.vcxproj  objviewer.vcxproj.filters
build-web/: .ninja_deps  .ninja_log  build.ninja  index.html  objviewer.data  objviewer.js  objviewer.wasm
build-web/embed/: embed.js  example.html
docs/: AI_WORKFLOW.md  ARCHITECTURE _VISION.md  ASSET_ROOT_SECURITY.md  DEPENDENCIES.md  DoxygenLayout.xml  GOD_DOCUMENT.md  GOLDEN_IMAGE_CI.md  GUIDE.md  INDEX.md  ONBOARDING.md  QA_ASSESSMENT.md  README.md  REFACTORING_GUIDE.md  RELEASE.md  RENDERING_ARCHITECTURE.md  ROADMAP.md  SETUP.md  TASKS.md  TEST_ORGANIZATION_SUMMARY.md  WEB_BUILD.md  WEB_UI_FEATURE_STATUS.md  architecture_overhaul_v1.md  generate-docs.bat  generate-docs.sh  help-system-update.md  icon-setup.md  json_ops_v1.md  materials.md  render_decomposition.md  rendering_arch_v1.md  research.md  rhi_architecture.md  rhi_guide.md
engine/: .glint_history  .glint_recent  Project1.vcxproj  Project1.vcxproj.filters  cube.ong
engine/Libraries/: .gitignore
engine/include/: application_core.h  assimp_loader.h  axisrenderer.h  brdf.h  bvh_node.h  camera_controller.h  camera_state.h  cli_parser.h  clock.h  colors.h  config_defaults.h  file_dialog.h  gizmo.h  gl_platform.h  grid.h  help_text.h  ibl_system.h  image_io.h  imgui_ui_layer.h  importer.h  importer_registry.h  input_handler.h  intersection.h  json_ops.h  light.h  material-core.h  material.h  material_binding.h  material_core.h  mesh_loader.h  microfacet_sampling.h  objloader.h  path_security.h  path_utils.h  pbr_material.h  ray.h  raytracer.h  raytracer_lighting.h  refraction.h  render-mode-selector.h  (+15 more)
engine/resources/: create_icon.bat  glint3d.rc
engine/shaders/: axis.vert  deferred.frag  gbuffer.frag  gbuffer.vert  gradient.frag  gradient.vert  outline.vert  pbr.frag  pbr.vert  rayscreen.frag  rayscreen.vert  shadow_depth.frag  ssr_refraction.frag  ssr_refraction.vert  standard.frag  standard.vert
engine/src/: BVHNode.cpp  DIRECTORY_STRUCTURE.md  RayUtils.cpp  ai_bridge.cpp  application_core.cpp  axisrenderer.cpp  brdf.cpp  bvh_node.cpp  camera_controller.cpp  cli_parser.cpp  clock.cpp  file_dialog.cpp  gizmo.cpp  glad.c  grid.cpp  ibl_system.cpp  image_io.cpp  imgui_ui_layer.cpp  json_ops.cpp  light.cpp  main.cpp  material.cpp  material_binding.cpp  material_core.cpp  microfacet_sampling.cpp  objloader.cpp  path_security.cpp  path_utils.cpp  shader.cpp  (+16 more)
examples/: README.md
renders/: .gitignore
schemas/: config_schema.json  json_ops_v1.json  json_ops_v2.json
shaders/: gradient.frag  gradient.vert  grid.frag  pbr.vert  raytrace.comp  standard.frag  standard.vert
tests/: README.md  camera_preset_test.cpp
tools/: README.md  arch_check.py  build-and-run.bat  build-and-run.sh  build-web.bat  build-web.sh  create_basic_ico.py  dev_web_ui.bat  dev_web_ui.ps1  generate-task-docs.py  generate_goldens.py  glint.bat  golden_image_compare.py  png_to_ico.cpp  requirements.txt  setup.bat  setup.sh  setup_tinyexr.bat  setup_tinyexr.sh  texc.ps1  texc.sh  update_icon.bat
ui/: index.html  package-lock.json  package.json
(+315 files in other folders)
